[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name               = "pdhd_trigger_training"
version            = "0.1.0"
description        = "Package to manage loading and manipulating training data"
readme             = "README.md"
requires-python    = ">=3.9"

authors = [
  { name  = "Ciaran Hasnip"
  , email = "ciaran.mark.hasnip@cern.ch"
  }
]

license = { text = "MIT" }

dependencies = [
  "zfit>=0.20",
  "pandas",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/CiaranH1997/PDHDTriggerModelTrainingTools/tree/main"



