[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name               = "pdhd_trigger_training"
version            = "0.1.0"
description        = "Package to manage loading and manipulating training data"
readme             = "README.md"
requires-python    = ">=3.9"

authors = [
  { name  = "Ciaran Hasnip"
  , email = "ciaran.mark.hasnip@cern.ch"
  }
]

license = { text = "MIT" }

dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.4",
  "tensorflow>=2.9",
  "scikit-learn>=1.0",
  "uproot>=5.0",
  "awkward>=2.0",
  "zfit>=0.20",
  "requests>=2.0",
  "rich>=10.0"
]

[project.urls]
Homepage = "https://github.com/CiaranH1997/PDHDTriggerModelTrainingTools/tree/main"



